@@ -1,3 +1,8 @@
+2003-07-15  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/eb42_flash.c: Generic Atmel driver now supports boot blocks.
+	Other tweaks for the generic Atmel driver changes.
+
 2003-05-12  Nick Garnett  <nickg@balti.calivar.com>
 
 	* cdl/flash_eb42.cdl: 
